<resources>
    <string name="app_name">Unsober</string>
    <string name="str_splash_app_name">unsober</string>
    <string name="str_disclaimer">DISCLAIMER</string>
    <string name="str_disclaimer_msg">
        PLEASE DRINK WITH CAUTION AND VERIFY YOU ARE OVER 21 YEARS OLD.
        BY ACCEPTING OUR DISCLAIMER YOU ACKNOWLEDGE YOU ARE 21 AND WILL
        DRINK WITH CAUTION AND WITHIN THE LIMITATIONS OF YOUR REGION.
    </string>
    <string name="str_accept">I ACCEPT</string>
    <string name="game_description">
        <![CDATA[ "Your team scores = sing Scorpions' 'Rock You Like A Hurricane' and drain your drink
<br>\nYour team gets scored on = sing Nine Inch Nails' 'Head Like A Hole' and take a sip
<br>\nYour team gets scored on again = sing Lenny Kravitz's 'It Ain't Over Till It's Over' and have a shot
<br>\nYour team gets scored on AGAIN = sing Smokey Robinson's 'Tears of a Clown' and drain somebody else's drink
<br>\nWTF? Your team takes a 4th one = no more alcohol for you until the end of the game. Start drinking water before things get ugly.
<br>\n
<br>
<br>2-minute minor = 2 sips
<br>\n4-minute minor = 4 sips
<br>\n5-minute major = 5 sips plus a shot
<br>\n10-minute misconduct = drain your drink plus 2 shots
<br>\nGame misconduct = go outside and pour your drink over your head (pour water if you're lily-livered)
<br>\nGloves & helmets come off and players square off = drain your drink and hide behind an item of furniture until it's over (yeah, seriously)
<br>\nRef or linesman falls over = sing AC\/DC's 'Thunderstruck' and drain your drink
<br>\nGoaltender scores
        ]]>
        </string>
    <string name="no_players_game_details">Minimum of 3 Players</string>
    <string name="game_details">Search Game</string>
    <string name="search_item">Enter Search Terms</string>
    <string name="search_item_tag_first">TAG #1</string>
    <string name="search_item_tag_second">TAG #2</string>
    <string name="search_item_tag_third">TAG #3</string>
    <string name="search">Search</string>
    <string name="str_game">Games</string>
    <string name="str_cocktails">Cocktails</string>
    <string name="str_cures">Cures</string>
    <!-- Ad mob id-->
    <!--<string name="banner_home_footer">ca-app-pub-1303442515313304/5915766474</string>-->
    <string name="banner_home_footer">ca-app-pub-4536209115110186/3605930150</string>
    <string name="interstitial_ad_id">ca-app-pub-4536209115110186/5082663350</string>
    <string name="str_title_cocktails">BROWSE COCKTAILS</string>
    <string name="game_details_views">4 Views </string>
    <string name="str_sport_games">Sport Games</string>
    <string name="str_cures_title">BROWSE CURES</string>
    <string name="str_game_title">BROWSE GAMES</string>
    <string name="str_search_result">SEARCH RESULT</string>
    <string name="content_error">No Result Found</string>
    <string name="str_no_item_found">No categories available in</string>
    <string name="purchase_btn">Purchase</string>
    <string name="cancel_btn">Cancel</string>
    <string name="upgrade_app">Upgrade</string>
    <string name="str_advanced_search">ADVANCED SEARCH</string>
    <string name="main_category_title">UNSOBER</string>
    <string name="inapp_purchase">PURCHASE</string>
    <string name="str_remove_ads">REMOVE ADS</string>
    <string name="str_keep_ads">KEEP ADS</string>
    <string name="str_purchase_msg">IF YOU ARE TIRED OF SEEING ADS YOU CAN UPGRADE
        WITH JUST \u20AC0.99 AND YOU WILL NEVER HAVE TO SEE ANOTHER AD AGAIN</string>
</resources>
