<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:padding="10dp"
    tools:context="com.unsober.activities.DisclaimerActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center|top"
            android:orientation="vertical">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="180dp"
                android:src="@drawable/ic_splash_icon" />

            <com.unsober.views.RobotoBoldTextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="28dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/disclaimer_back"
                android:paddingBottom="4dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:paddingTop="4dp"
                android:text="@string/str_disclaimer"
                android:textColor="@color/primaryText"
                android:textSize="22sp"
                android:textStyle="bold" />

            <com.unsober.views.RobotoTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:padding="4dp"
                android:text="@string/str_disclaimer_msg"
                android:textColor="@color/secondaryText"
                android:textSize="18sp" />

            <com.unsober.views.RobotoTextView
                android:id="@+id/txtAccept"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginBottom="28dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/accept_back"
                android:paddingBottom="6dp"
                android:paddingLeft="38dp"
                android:paddingRight="38dp"
                android:paddingTop="6dp"
                android:text="@string/str_accept"
                android:textColor="@android:color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</RelativeLayout>
