<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/gameScrollview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
           >


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="180dp">

                <ImageView
                    android:id="@+id/imgGameDetails"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/game_details_img" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/loginTransparntdark">

                    <TextView
                        android:id="@+id/txtTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentBottom="true"
                        android:layout_alignParentStart="true"
                        android:layout_marginBottom="25dp"
                        android:layout_marginStart="21dp"
                        android:text="Game Title # 1"
                        android:textSize="32sp"
                        android:textColor="@android:color/white"
                        android:textStyle="normal" />
                </RelativeLayout>


            </RelativeLayout>

        </FrameLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/txtDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="16dp"
                    android:text="@string/game_description" />




            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_person_white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:padding="4dp"
                    android:text="@string/no_players_game_details"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="@android:color/white" />


            </LinearLayout>

           <!-- <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

               &lt;!&ndash; <VideoView
                    android:id="@+id/videoGameDetails"
                    android:layout_width="match_parent"
                    android:layout_height="210dp"
                    android:layout_margin="12dp"/>&ndash;&gt;
            </LinearLayout>-->
            <VideoView
                android:layout_width="match_parent"
                android:layout_height="210dp"
                android:background="#0000"
                android:layout_margin="12dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="48dp"
                android:background="@color/colorPrimary"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:padding="4dp"
                    android:text="@string/game_details_views"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>

        </LinearLayout>


    </LinearLayout>
</ScrollView>