<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="180dp">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <com.android.volley.toolbox.NetworkImageView
                        android:id="@+id/imgGame"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="fitXY"
                        android:src="@drawable/game_details_img" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/loginTransparnt"
                        android:gravity="bottom|start"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtTitle"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentStart="true"
                            android:layout_marginBottom="25dp"
                            android:layout_marginStart="21dp"
                            android:text="Game Title # 1"
                            android:textColor="@android:color/white"
                            android:textSize="32sp"
                            android:textStyle="normal" />
                    </LinearLayout>
                </FrameLayout>
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_person_white" />

                <TextView
                    android:id="@+id/txtPlayers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:padding="4dp"
                    android:text="@string/no_players_game_details"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>
            <TextView
                android:id="@+id/txtDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"/>

            <!--<LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:padding="8dp">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="10dp"
                    android:padding="4dp"
                    android:src="@drawable/ic_person_white" />

                <TextView
                    android:id="@+id/txtPlayers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="4dp"
                    android:padding="4dp"
                    android:text="@string/no_players_game_details"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>-->

            <FrameLayout
                android:id="@+id/youtube_fragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="16dp"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:orientation="horizontal"
                android:padding="8dp">

                <TextView
                    android:id="@+id/txtViews"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="25dp"
                    android:padding="4dp"
                    android:text="@string/game_details_views"
                    android:textAppearance="?android:attr/textAppearanceListItemSmall"
                    android:textColor="@android:color/white" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center_horizontal|bottom"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_home_footer"></com.google.android.gms.ads.AdView>
</LinearLayout>